# VulkanEngine

./: .gitignore  .scribbles.txt.swp  CMakeLists.txt  Setup Readme.txt
cmake/modules/: FindASSIMP.cmake  FindVulkan.cmake
resources/models/: ball.blend  bun_zipper.obj.mtl  cube.blend  cube.blend1
resources/shaders/: CompilePbr.bat  CompilePbr.sh  CompilePbrTex.bat  CompilePhong.bat  CompileReflect.bat  CompileShaders.bat  CompileSkybox.bat  frag.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbrtexture.frag  phong.vert  reflect.frag  reflect.frag.spv  reflect.vert  reflect.vert.spv  shader.frag  shader.vert  skybox.frag  skybox.vert  skybox.vert.spv  vert.spv
resources/shaders/temp/: CompileNoPause.bat  CompileShaders.sh  frag.spv  reflect.vert.spv  shader.vert  wobblefrag.spv
resources/shaders/temp/working reflect/: reflect.vert.spv
resources/textures/: pinksky.dds
shaders/: CompileShaders.bat  CompileShaders.sh  shader.frag  shader.vert
src/: HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  Utility.hpp  VulkanDrawer.cpp  VulkanDrawer.hpp  VulkanTriangle.cpp  VulkanTriangle.hpp  main.cpp
src/Behaviours/: Behaviour.hpp
src/Core/: Camera.cpp  Camera.hpp  GameBase.cpp  GameBase.hpp  GameObject.cpp  GameObject.hpp  GameWorld.cpp  GameWorld.hpp  KeyInput.cpp  KeyInput.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  VulkanInterface.cpp  VulkanInterface.hpp  VulkanLayer.cpp  VulkanLayer.hpp
src/Core/GraphicsComponents/: LightSource.cpp  LightSource.hpp  ReflectionProbe.cpp  ReflectionProbe.hpp
src/Core/Material/: AbstractMaterial.hpp  SkyboxMaterial.hpp
src/Core/Math/: MathConstants.cpp  MathConstants.hpp  Transform.cpp  Transform.hpp  VectorHelper.cpp  VectorHelper.hpp
src/Core/MtVulkanAPI/: IRenderable.cpp  IRenderable.hpp  RendererLayer.hpp  VertexInputDescriptor.hpp  VulkanDescriptorSet.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanHelpers.cpp  VulkanHelpers.hpp  VulkanModel.hpp  VulkanPipeline.hpp  VulkanPipelineLayout.cpp  VulkanPipelineLayout.hpp  VulkanRenderable.cpp  VulkanRenderable.hpp  VulkanRendererBase.cpp  VulkanRendererBase.hpp  VulkanShaderProgram.hpp  VulkanTexture.hpp  VulkanUtility.cpp  VulkanUtility.hpp  VulkanWindow.cpp  VulkanWindow.hpp  WrappedVulkanBuffer.hpp  WrappedVulkanDevice.hpp  WrappedVulkanSwapchain.hpp  WrappedVulkanValidation.cpp  WrappedVulkanValidation.hpp  WrappedVulkanWindow.cpp  WrappedVulkanWindow.hpp
src/Core/MtVulkanAPI/Debug/: VulkanDebug.cpp  VulkanDebug.hpp
src/Core/MtVulkanAPI/Device/: Display.cpp  Display.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/Core/MtVulkanAPI/Pipelines/: VulkanPipeline.cpp  VulkanPipeline.hpp
src/Core/MtVulkanAPI/Renderpass/: VulkanRenderpass.cpp  VulkanRenderpass.hpp
src/Core/MtVulkanAPI/Swapchain/: VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/Core/MtVulkanAPI/Window/: VulkanWindow.cpp  VulkanWindow.hpp
src/Core/Renderers/: PbrRenderer.cpp  PbrRenderer.h  PbrRenderer.hpp  PbrRenderer.hpp~Stashed changes  PbrRenderer.hpp~Updated upstream  PbrTexRenderer.cpp  PbrTexRenderer.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/Core/VertexLayouts/: StandardLayout.hpp
src/Material/: AbstractMaterial.hpp  SimplePbrMaterial.hpp  SkyboxMaterial.hpp
src/Materials/: Material.cpp  Material.hpp
src/Utility/: ConsoleGlm.hpp  Constants.cpp  Constants.hpp  GameTimer.cpp  GameTimer.hpp  KeyInput.cpp  KeyInput.hpp  Logger.cpp  Logger.hpp  Mesh.cpp  Mesh.hpp  MouseInput.cpp  MouseInput.hpp  ShaderUtils.hpp  Texture.cpp  Texture.hpp  Timer.hpp
src/Vulkan/: VulkanEngine.cpp  VulkanEngine.hpp
src/Vulkan/GLFW/: GlfwWindow.cpp  GlfwWindow.hpp
src/Vulkan/VkObjects/: VulkanDebug.cpp  VulkanDebug.hpp  VulkanInstance.cpp  VulkanInstance.hpp
